# calendaria

./: .gitignore  Cargo.toml  README.md
src/: main.rs  secret.rs
