[package]
name = "calendaria"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio =  { version = "1.44.1", features = ["full"] }
